# jxl-tools

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.md  implementation_plan.md  jxl_resources.md  pyproject.toml
backend/: __main__.py  binutil.py  cli.py  converter.py  jobs.py  local_files.py  metadata.py  models.py  server.py
backend/_vendor/: __init__.py
backend/static/: index.html  style.css
backend/static/css/: results.css
backend/static/js/: core.js  files.js  local.js  results.js  settings.js  tooltips.js
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ConversionSettingsPanel.tsx  Header.tsx  LocalModeView.tsx  ProgressModal.tsx  ResultsView.tsx  TreeNode.tsx  UI.tsx  UploadModeView.tsx
frontend/src/hooks/: useConversionEngine.ts
frontend/src/store/: useAppStore.ts
frontend/src/utils/: export.ts  formatBytes.ts  formatDuration.ts
src/jxl_tools/: __init__.py  __main__.py  binutil.py  cli.py  converter.py  metadata.py  models.py  server.py
src/jxl_tools/static/: app.js  index.html  style.css
src/jxl_tools/static/css/: base.css  progress.css  responsive.css  settings.css
src/jxl_tools/static/js/: conversion.js  core.js  files.js  local.js  progress.js  settings.js
tests/: test_conversion.py  test_server.py
